<resources>
    <string name="app_name">RekanIkan</string>
    <string name="tagline_welcome">Your Friendly Fish Care Partner</string>
    <string name="signup">Register</string>
    <string name="signup_sub_title">Please fill your data to register</string>
    <string name="login">Login</string>
    <string name="name_cannot_empty">Name is required</string>
    <string name="wrong_email_format">Invalid email format</string>
    <string name="wrong_password_format">Password cannot less than 8 characters</string>
    <string name="greetings2">Hope your fishes always healthy</string>
    <string name="hero_caption">Your friendly fish care assistant</string>
    <string name="fishscan">Fish Scan</string>
    <string name="feeder">Feeder</string>
    <string name="add_feeder">Add Feeder</string>
    <string name="add_schedule">Add Feeding Schedule</string>
    <string name="set_time">Set time</string>
    <string name="add_feeding_schedule">Add Schedule</string>
    <string name="edit_feeding_schedule">Edit Schedule</string>
    <string name="detected_fish">Detected Fish:</string>
    <string name="fish_treatment">Fish Treatment</string>
    <string name="fish_characteristic">Fish characteristic</string>
    <string name="add_feeder_sub_title">Please fill your feeder data</string>
    <string name="add_feeding_schedule_sub_title">Please fill your feeding schedule</string>
    <string name="edit_feeding_schedule_sub_title">Edit your feeding schedule</string>
    <string name="no_feeder">No feeder added yet</string>
    <string name="no_feeding_history">No history found</string>
    <string name="no_records">No records yet</string>
    <string name="add_your_feeder">Add your feeder</string>
    <string name="add_new_plan">Add new schedule</string>
    <string name="your_feeder">Your feeder</string>
    <string name="daily_feeding_schedule">Daily Feeding Schedule</string>
    <string name="feeding_records">Feeding records</string>
    <string name="fish_collection">Fish Collection</string>
    <string name="language">Language</string>
    <string name="chat_center">Chat Center</string>
    <string name="shop">Shop</string>
    <string name="buy_here">Buy here</string>
    <string name="greeting">Hello %1$s</string>
    <string name="rekanikan_shop">RekanIkan Shop</string>
    <string name="our_products">Our Products</string>
    <string name="user_info">User Info</string>
    <string name="tap_to_edit">Tap to edit</string>
    <string name="open_camera">Open Camera</string>
    <string name="scan">Scan</string>
    <string name="buy_on_shoppee">Buy on Shopee</string>
    <string name="recent_feeding_history">Recent feeding history</string>
    <string name="promor_information">Promo and information</string>
    <string name="have_no_account">Don\'t have an account? </string>
    <string name="have_no_feeder">Don\'t have a feeder? </string>
    <string name="have_account">Already have an account? </string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">please login to continue</string>
    <string name="title_login_page">Sudah siap untuk upgrade skill?</string>
    <string name="name">Name</string>
    <string name="time">Time</string>
    <string name="feeder_id">Feeder ID</string>
    <string name="feeding_amount">Feeder amount (gram)</string>
    <string name="logout">Logout</string>
    <string name="delete_schedule">Delete schedule</string>
    <string name="success_add_schedule">Feeding schedule added successfully</string>
    <string name="success_edit_schedule">Feeding schedule edited successfully</string>
    <string name="success_delete_schedule">Feeding schedule deleted successfully</string>
    <string name="okay">Okay</string>
    <string name="feeder_data_cannot_empty">Feeder data cannot empty</string>
    <string name="success_add_feeder">Feeder added successfully</string>
    <string name="maximum_schedules">2 schedules maximum</string>
    <string name="articles">Articles for you</string>
    <string name="login_success">Login Successfull</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="logout_confirmation">Are you sure want to logout?</string>
    <string name="register_success">Account %1$s has created successfully</string>
    <string name="next">Next</string>
    <string name="checkout">Checkout</string>
    <string name="payment_method">Payment method</string>
    <string name="fish_combination">Can be combined with</string>
    <string name="gallery">Gallery</string>
</resources>